--- a/registrasi.html
+++ b/registrasi.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form Registrasi</title>
 </head>
 <body>
-    <form action="index.html" method="post">
+    <form action="registrasi.html" method="post">
     <h1>Form Registrasi</h1>
     <fieldset>
         <legend>Biodata</legend>
